In Wall4PHP 1.1_TeraWurfl2 since Wall4PHP 1.1

*) Improved User Agent Detection System to detect the actual User Agent even when Proxies
   and Opera Mini mask them.

*) Added support for Tera-WURFL v2.x (Steve Kamerman, David, Alex).

*) This version works with PHP Tools, Tera-WURFL 1.x and Tera-WURFL 2.x


In Wall4PHP 1.1 since Wall4PHP 1.01

*) Great minor version number change.

*) 100% compatible with PHP5.

*) Works with Tera WURFL. You just need to download Tera WURFL, extract it into (already
   created but empty) folder tera-wurfl at the Wall4PHP root. Then you will need to
   configure it. When it's done, you need to change value of WALL_USE_TERA_WURFL
   configuration constant (check with wall_prepend.php) and include
   tera-wurfl/tera_wurfl_config.php, not wurfl/wurfl_config.php (with this release
   wall_prepend.php choses which config to inlcude by value of WALL_USE_TERA_WURFL).
   Thanks to Joan Blaas for reminding about this late todo list item.
        Affected files: tera-wurfl/* (empty directory)
                        wall_prepend.php
                        Wall.php

*) Added doctype for cHTML (Compact HTML 1.0 Draft) - thanks to Natalia Pujol.
        Affected files: Wall/Element/Xmlpidtd.php
        
*) Fixed bad correlation of <tr> and <td> tags when attrib "colnum=1" - thanks to Natalia
   Pujol.
        Affected files: Wall/Element/Cool_menu.php

*) Removed charset portion from content-type headers being sent by wall:document. With 
   this LG KG800 (Chocolate) could not display page.
        Affected files: Wall/Element/Document.php

*) Fixed bug in preferred markup detection, if decision is based on HTTP_ACCEPT header. 
   The problem was with missing 'break' statement after switch case. A little 
   modification also was made - if browser reports that it likes text/html, we return 
   xhtmlmp as preferred markup. 
        Affected files: Wall/TagUtil.php

*) Fixed logic bug in Wall object. Non critical.